Fixed overflow of hidden component and button margin

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 html, body, .container, #start-container, #story-container {
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
 }
 
 .container {
@@ -101,6 +102,7 @@ html, body, .container, #start-container, #story-container {
 	padding: 10px;
 	background-color: #969393;
 	border-radius: 10px;
+	margin: 5px 0;
 }
 
 .choiceButton.endButton {
